tests/negative/neg_case_multi_choice.safe
-- Test: neg_case_multi_choice
-- Description: Multi-choice case arms are outside the PR11.2 case subset.
-- Expected: REJECT unsupported_source_construct

package Neg_Case_Multi_Choice

   function Classify (Value : in Integer) returns Integer

      case Value
         when 1, 2
            return 1;

         when others
            return 0;

